yiwen: update paper.tex

--- a/paper.tex
+++ b/paper.tex
@@ -98,10 +98,10 @@ New York University, KTH Royal Institute of Technology, UBC \\
 \input{abstract_yiwen_v1.0}
 \input{introduction_yiwen_v1.0}
 \input{background_yiwen_v1.0}
-\input{architecture}
-\input{evaluation}
-\input{related_work}
-\input{conclusion}
+\input{architecture_yiwen_v1.0}
+\input{evaluation_yiwen_v1.0}
+\input{related_work_yiwen_v1.0}
+\input{conclusion_yiwen_v1.0}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
