--- a/paper.tex
+++ b/paper.tex
@@ -98,6 +98,7 @@ New York University, KTH Royal Institute of Technology, UBC \\
 \input{abstract_yiwen_v1.0}
 \input{introduction_yiwen_v1.0}
 \input{motivation_yiwen_v1.0}
+\input{solution_yiwen_v1.0}
 \input{background_yiwen_v1.0}
 \input{architecture_yiwen_v1.0}
 \input{evaluation_yiwen_v1.0}
