yiwen: update paper.tex

--- a/paper.tex
+++ b/paper.tex
@@ -99,8 +99,7 @@ New York University, KTH Royal Institute of Technology, UBC \\
 \input{introduction_yiwen_v1.0}
 \input{motivation_yiwen_v1.0}
 \input{solution_yiwen_v1.0}
-\input{background_yiwen_v1.0}
-\input{architecture_yiwen_v1.0}
+\input{newarchitecture_yiwen_v1.0}
 \input{evaluation_yiwen_v1.0}
 \input{related_work_yiwen_v1.0}
 \input{conclusion_yiwen_v1.0}
